updating sasjsconfig.json to v2 of the CLI model

--- a/sasjs/sasjsconfig.json
+++ b/sasjs/sasjsconfig.json
@@ -1,22 +1,27 @@
 {
-  "cmnServices": [
-    "services/common"
-  ],
-  "useMacroCore": true,
+ "serviceConfig": {
+  "serviceFolders": [
+   "services/common"
+  ]
+ },
   "targets": [
     {
       "name": "viya",
       "serverType": "SASVIYA",
       "serverUrl": "",
       "appLoc": "/Public/sasjs/log-parser",
-      "deployServicePack": false,
-      "tgtDeployScripts": [
-        "sasjs/build/copyscript.sh"
-      ],
-      "assetPaths": [],
-      "streamWeb": true,
-      "streamWebFolder": "webv",
-      "webSourcePath": "src"
+      "deployConfig": {
+        "deployServicePack": true,
+        "deployScripts": [
+         "sasjs/build/copyscript.sh"
+        ]
+      },
+      "streamConfig": {
+        "assetPaths": [],
+        "streamWeb": true,
+        "streamWebFolder": "webv",
+        "webSourcePath": "src"
+      }
     }
   ]
 }
