fix(asset-path): fixed service path

--- a/sasjs/sasjsconfig.json
+++ b/sasjs/sasjsconfig.json
@@ -2,7 +2,7 @@
  "$schema": "https://cli.sasjs.io/sasjsconfig-schema.json",
  "serviceConfig": {
   "serviceFolders": [
-   "services/common"
+   "sasjs/services/common"
   ]
  },
   "targets": [
